# biz/router/ws/ws.go
@@ -1,0 +1,27 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package ws
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	ws "hertz/demo/biz/handler/ws"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_v1 := root.Group("/v1", _v1Mw()...)
+		{
+			_hertz := _v1.Group("/hertz", _hertzMw()...)
+			_hertz.GET("/ws", append(_chatroomMw(), ws.ChatRoom)...)
+		}
+	}
+}
