# pkg/docs/swagger.json
@@ -223,6 +223,19 @@
                     }
                 }
             }
+        },
+        "/v1/hertz/ws": {
+            "get": {
+                "description": "websocket api",
+                "tags": [
+                    "ws"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
